--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -242,5 +242,6 @@
   "land": "Tanah",
   "RENT": "SEWA",
   "BUY": "BELI",
-  "TOUR": "WISATA"
+  "TOUR": "WISATA",
+  "wish_list":"Daftar Keinginan"
 }
