--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -242,5 +242,6 @@
   "land": "Tanah",
   "RENT": "SEWA",
   "BUY": "BELI",
-  "TOUR": "PENGEMBARAAN"
+  "TOUR": "PENGEMBARAAN",
+  "wish_list":"Senarai Keinginan"
 }
