--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -237,5 +237,6 @@
   "land": "Lupa",
   "RENT": "UPOHAN",
   "BUY": "BILHIN",
-  "TOUR": "BIYAHENG TURISMO"
+  "TOUR": "BIYAHENG TURISMO",
+  "wish_list":"Listahan ng Nais"
 }
