--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -242,5 +242,6 @@
   "land": "ที่ดิน",
   "RENT": "เช่า",
   "BUY": "ซื้อ",
-  "TOUR": "ทัวร์"
+  "TOUR": "ทัวร์",
+  "wish_list":"รายการสิ่งที่ต้องการ"
 }
