--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -242,5 +242,6 @@
   "land": "Đất",
   "RENT": "THUÊ",
   "BUY": "MUA",
-  "TOUR": "DU LỊCH"
+  "TOUR": "DU LỊCH",
+  "wish_list":"Danh sách mong muốn"
 }
