--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -238,5 +238,6 @@
   "RENT": "UPOHAN",
   "BUY": "BILHIN",
   "TOUR": "BIYAHENG TURISMO",
-  "wish_list":"Listahan ng Nais"
+  "wish_list":"Listahan ng Nais",
+  "change_language_success":"Tagumpay na pagbabago ng wika!"
 }
