--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -243,5 +243,6 @@
   "RENT": "เช่า",
   "BUY": "ซื้อ",
   "TOUR": "ทัวร์",
-  "wish_list":"รายการสิ่งที่ต้องการ"
+  "wish_list":"รายการสิ่งที่ต้องการ",
+  "change_language_success":"เปลี่ยนภาษาสำเร็จ!"
 }
