--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -243,5 +243,6 @@
   "RENT": "THUÊ",
   "BUY": "MUA",
   "TOUR": "DU LỊCH",
-  "wish_list":"Danh sách mong muốn"
+  "wish_list":"Danh sách mong muốn",
+  "change_language_success":"Đổi ngôn ngữ thành công!"
 }
