--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -244,5 +244,10 @@
   "BUY": "BELI",
   "TOUR": "PENGEMBARAAN",
   "wish_list":"Senarai Keinginan",
-  "change_language_success":"Berjaya tukar bahasa!"
+  "change_language_success":"Berjaya tukar bahasa!",
+  "username_or_email":"Nama pengguna atau emel",
+  "enter_username_email":"Masukkan nama pengguna atau emel anda",
+  "for_sale":"Untuk dijual",
+  "register_partner":"Daftar rakan kongsi",
+  "become_shome_partner":"Menjadi rakan kongsi SHome"
 }
