--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -255,5 +255,6 @@
     "enter_username_email":"Enter your username or email",
     "for_sale":"For sale",
     "register_partner":"Register partner",
-    "become_shome_partner":"Become SHome partner"
+    "become_shome_partner":"Become SHome partner",
+    "real_estate_type":"Real estate type"
 }
