--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -249,5 +249,6 @@
   "enter_username_email":"Masukkan nama pengguna atau email Anda",
   "for_sale":"Untuk dijual",
   "register_partner":"Daftar mitra",
-  "become_shome_partner":"Menjadi mitra SHome"
+  "become_shome_partner":"Menjadi mitra SHome",
+  "real_estate_type":"Tipe properti"
 }
