--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -249,5 +249,6 @@
   "enter_username_email":"Masukkan nama pengguna atau emel anda",
   "for_sale":"Untuk dijual",
   "register_partner":"Daftar rakan kongsi",
-  "become_shome_partner":"Menjadi rakan kongsi SHome"
+  "become_shome_partner":"Menjadi rakan kongsi SHome",
+  "real_estate_type":"Jenis hartanah"
 }
