--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -244,5 +244,6 @@
   "enter_username_email":"Ipasok ang iyong username o email",
   "for_sale":"Para sa benta",
   "register_partner":"Magparehistro ng kasosyo",
-  "become_shome_partner":"Maging kasosyo sa SHome"
+  "become_shome_partner":"Maging kasosyo sa SHome",
+  "real_estate_type":"Uri ng real estate"
 }
