--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -249,5 +249,6 @@
   "enter_username_email":"ป้อนชื่อผู้ใช้หรืออีเมลของคุณ",
   "for_sale":"สำหรับขาย",
   "register_partner":"ลงทะเบียนพาร์ทเนอร์",
-  "become_shome_partner":"เป็นพาร์ทเนอร์ SHome"
+  "become_shome_partner":"เป็นพาร์ทเนอร์ SHome",
+  "real_estate_type":"ประเภทอสังหาริมทรัพย์"
 }
