--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -249,5 +249,6 @@
   "enter_username_email":"Nhập tên người dùng hoặc email của bạn",
   "for_sale":"Đang bán",
   "register_partner":"Đăng ký đối tác",
-  "become_shome_partner":"Trở thành đối tác SHome"
+  "become_shome_partner":"Trở thành đối tác SHome",
+  "real_estate_type":"Loại bất động sản"
 }
