--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -30,7 +30,7 @@
     "we_are_always_here":"We are always here to support you",
     "rent":"RENT",
     "buy":"BUY",
-    "tour":"TOUR",
+    "tour":"Tour",
     "daily":"Daily",
     "monthly":"Monthly",
     "yearly":"Yearly",
@@ -214,7 +214,6 @@
     "customer_rent_project":"Customers rent the project",
     "sell":"Sell",
     "lease":"Lease",
-    "need_to_rent_buy":"Need to rent, need to buy",
     "real_estate_title":"Real estate title",
     "enter_real_estate_title":"Enter real estate title",
     "select_the_furniture":"Select the furniture",
@@ -256,5 +255,19 @@
     "for_sale":"For sale",
     "register_partner":"Register partner",
     "become_shome_partner":"Become SHome partner",
-    "real_estate_type":"Real estate type"
+    "real_estate_type":"Real estate type",
+    "general_information":"General Information",
+    "estate_detail":"Estate detail",
+    "estate_furniture":"Estate furniture",
+    "main_currency":"Main Currency",
+    "distance_to_city":"Distance to City Center",
+    "number_of_floors":"Number of Floors",
+    "estate_facilities":"Estate facilities",
+    "estate_contact":"Estate contact info",
+    "rooms":"Rooms",
+    "estate_photo":"Estate Photos",
+    "payment_information":"Payment information",
+    "bank_name":"Bank name",
+    "account_number":"Account number",
+    "account_holder":"Account holder"
 }
