--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -208,7 +208,6 @@
   "customer_rent_project": "Pelanggan menyewa projek",
   "sell": "Jual",
   "lease": "Sewa",
-  "need_to_rent_buy": "Perlu disewa, perlu dibeli",
   "real_estate_title": "Tajuk hartanah",
   "enter_real_estate_title": "Masukkan tajuk hartanah",
   "select_the_furniture": "Pilih perabot",
@@ -250,5 +249,19 @@
   "for_sale":"Untuk dijual",
   "register_partner":"Daftar rakan kongsi",
   "become_shome_partner":"Menjadi rakan kongsi SHome",
-  "real_estate_type":"Jenis hartanah"
+  "real_estate_type":"Jenis hartanah",
+  "general_information": "Maklumat Am",
+  "estate_detail": "Butiran Harta Tanah",
+  "estate_furniture": "Perabot Harta Tanah",
+  "main_currency": "Mata Wang Utama",
+  "distance_to_city": "Jarak ke Pusat Bandar",
+  "number_of_floors": "Bilangan Tingkat",
+  "estate_facilities": "Kemudahan Harta Tanah",
+  "estate_contact": "Maklumat Hubungan Harta Tanah",
+  "rooms": "Bilik",
+  "estate_photo": "Gambar Harta Tanah",
+  "payment_information": "Maklumat Pembayaran",
+  "bank_name": "Nama Bank",
+  "account_number": "Nombor Akaun",
+  "account_holder": "Pemegang Akaun"
 }
