--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -1,263 +1,280 @@
 {
-    "welcome_back": "嗨，欢迎回来！",
-    "email": "邮箱",
-    "password": "密码",
-    "confirm_password": "确认密码",
-    "enter_password": "输入您的密码",
-    "login": "登录",
-    "forgot_password": "忘记密码？",
-    "dont_have_account": "还没有账号？",
-    "signup": "注册",
-    "enter_username": "输入您的用户名",
-    "enter_firstname": "输入您的名字",
-    "enter_lastname": "输入您的姓氏",
-    "enter_phone": "输入您的电话",
-    "enter_email": "输入您的邮箱",
-    "enter_referral": "输入您的推荐码",
-    "enter_new_password": "输入新密码",
-    "enter_password_confirm": "确认密码",
-    "already_have_account": "已有账号？",
-    "submit": "提交",
-    "code": "代码",
-    "this_field_required": "此字段为必填项",
-    "password_not_match": "输入的密码不匹配，请重试。",
-    "use_6_characters": "密码需至少包含6个字符",
-    "invalid_email": "抱歉，只允许使用字母（a-z）、数字（0-9）和句点（.）。",
-    "find_accommodation": "找住宿...",
-    "Find_Accommodation": "找住宿",
-    "we_are_always_here": "我们随时为您提供支持",
-    "rent": "租",
-    "buy": "买",
-    "tour": "游览",
-    "daily": "日租",
-    "monthly": "月租",
-    "yearly": "年租",
-    "around_me": "附近",
-    "studio": "工作室",
-    "all": "全部",
-    "apartment": "公寓",
-    "villa": "别墅",
-    "room": "房间",
-    "others": "其他",
-    "full_furnished": "全配",
-    "unfurnished": "未配",
-    "fixed_price": "固定价格",
-    "negotiable": "可议价",
-    "im_flexible": "我可以接受不同日期",
-    "hotel_residence": "酒店式住宅",
-    "seamless_living": "无缝生活，让酒店成为您的永久家园！",
-    "saveloka_recommended": "Saveloka 推荐单位",
-    "stay_monthly": "以更低的价格住一个月 🤑",
-    "disc_upto": "折扣高达",
-    "see_all": "查看全部",
-    "promotion": "促销",
-    "find_best": "寻找最佳住宿单位 🌴",
-    "thematic_instagram": "主题和 Instagram 适用的单位！✨",
-    "stay_with": "留在一个新的氛围里！",
-    "saveloka_premium": "Saveloka 高级",
-    "selected_premium": "由 Saveloka 提供 5 星级服务的精选高级单位",
-    "find_appartment": "找到符合您预算的公寓！💳",
-    "price_below": "以下价格为月租价格",
-    "lowest": "最低",
-    "highest": "最高",
-    "frequently": "常用价格",
-    "budget": "预算",
-    "popular": "热门",
-    "luxury": "豪华",
-    "weekly_hot_deal": "每周热门优惠 🔥",
-    "ends_in": "结束于",
-    "best_selling": "最畅销的公寓大楼 🏆",
-    "recommend_apartments": "推荐公寓 🏬",
-    "looking_for_a_place": "正在寻找住所？🏠",
-    "find_by_saveloka": "在印度尼西亚大城市中找“由 Saveloka 提供”的单位",
-    "new": "新",
-    "discussion": "讨论",
-    "introduction": "介绍",
-    "room_amenities": "房间设施",
-    "unit_facilities": "单位设施",
-    "map_view": "地图视图",
-    "reviews": "评论",
-    "overview": "概览",
-    "additional_information": "附加信息",
-    "property_live_date": "房产上线日期",
-    "check_in": "入住",
-    "check_out": "退房",
-    "from": "从",
-    "to": "到",
-    "monthly_deposit": "月租押金",
-    "browse_similar": "浏览附近类似的公寓",
-    "per_month_from": "每月价格从：",
-    "contact_host": "联系主人",
-    "book_now": "立即预订",
-    "add_booking": "添加预订",
-    "no_active_booking": "目前没有有效预订",
-    "explore_accommodation": "探索住宿",
-    "check_out_all": "查看所有进行中的促销",
-    "daily_promo": "每日促销",
-    "monthly_promo": "每月促销",
-    "yearly_promo": "每年促销",
-    "rental_promotions": "租赁促销",
-    "filter": "筛选",
-    "filter&sort": "筛选和排序",
-    "accommodation_name": "住宿名称",
-    "type": "类型",
-    "review_score": "评价分数",
-    "sort_result": "按照排序结果",
-    "lowest_price": "最低价格",
-    "highest_price": "最高价格",
-    "best_rating": "最高评分",
-    "number_of_bedrooms": "卧室数量",
-    "benefit_and_annual": "福利和年度账户维护费",
-    "posting_package": "发布套餐",
-    "cost_for_each": "每种新闻类型的费用",
-    "create_an_online": "创建在线交易平台",
-    "post": "发布",
-    "regular_member": "普通会员",
-    "accumulated_points": "累积积分",
-    "point": "积分",
-    "view_plot": "查看剧情",
-    "free_new": "免费新闻",
-    "view_personal": "查看个人信息",
-    "see_the_news": "查看已保存的新闻",
-    "post_management": "发布管理",
-    "financial_management": "财务管理",
-    "customer_management": "客户管理",
-    "managing_trading": "管理交易平台",
-    "client": "客户",
-    "post_price": "发布价格列表",
-    "install_faceid": "安装面容识别",
-    "support": "支持",
-    "hotline": "热线",
-    "website": "网站",
-    "log_out": "登出",
-    "change_password": "更改密码",
-    "personal_information": "个人信息",
-    "customer_buy": "客户需要购买项目",
-    "customer_rent": "客户需要购买 - 需要租赁",
-    "contact_purchased": "已购买联系",
-    "old_password": "旧密码",
-    "new_password": "新密码",
-    "ok": "确定",
-    "balance": "余额",
-    "bonus": "奖金",
-    "donated": "捐赠",
-    "phone": "电话",
-    "gender": "性别",
-    "address": "地址",
-    "main_expiration": "主要到期日期",
-    "normal_expiration": "正常到期日期",
-    "gift_expiration": "礼品到期日期",
-    "link_website": "网站链接",
-    "social_network_link": "社交网络链接",
-    "real_estate": "房地产新闻",
-    "project_news": "项目新闻",
-    "believe_in_knowledge": "相信知识",
-    "news_is_showing": "新闻正在展示",
-    "news_waiting": "等待批准的新闻",
-    "information_not_valid": "信息无效",
-    "unpaid_news": "未支付的新闻",
-    "expired_news": "已过期的新闻",
-    "news_stopped": "停止发布新闻",
-    "list_of_customers": "客户列表",
-    "customers_see_posting": "客户查看帖子",
-    "create_trading": "免费创建交易平台",
-    "invitation_trading": "邀请加入交易平台",
-    "post_price_list_news": "新闻发布价格表",
-    "benefit_annual": "福利和年度账户",
-    "deposit": "存款",
-    "withdraw": "提现",
-    "gift_account": "礼品账户",
-    "reward_membership": "奖励会员积分",
-    "upgrade_account": "升级账户",
-    "day": "天",
-    "quantity": "数量",
-    "status": "状态",
-    "wallet": "钱包",
-    "amount_deposit": "存款金额",
-    "from_money_source": "来源",
-    "add_bank": "添加银行",
-    "add_tag": "添加标签",
-    "your_card_information": "您的卡信息将被保密",
-    "card_detail": "卡片细节",
-    "card_number": "卡号",
-    "expiration_date": "到期日期",
-    "full_name_cardholder": "持卡人姓名",
-    "address_for_credit": "信用卡/借记卡注册地址",
-    "choose_logo": "选择徽标",
-    "name_of_trading": "交易平台名称",
-    "description_content": "描述内容",
-    "introductory_photo": "介绍照片",
-    "headquarter_information": "总部信息",
-    "office_address": "办公地址",
-    "province_city": "省/市",
-    "country": "国家",
-    "ward_commune": "区/公社",
-    "branch_information": "分支信息",
-    "add_branch": "添加分支",
-    "contact_person_information": "联系人信息",
-    "full_name": "全名",
-    "position": "职位",
-    "create": "创建",
-    "enter_a_description": "输入描述",
-    "select_province_city": "选择省/市",
-    "select_district": "选择区",
-    "select_project": "选择项目",
-    "search": "搜索",
-    "customer_buy_project": "客户购买项目",
-    "customer_rent_project": "客户租赁项目",
-    "sell": "出售",
-    "lease": "租赁",
-    "real_estate_title": "房地产标题",
-    "enter_real_estate_title": "输入房地产标题",
-    "select_the_furniture": "选择家具",
-    "price": "价格",
-    "enter_price": "输入价格",
-    "acreage": "面积",
-    "enter_the_land_area": "输入土地面积",
-    "contact_info": "联系信息",
-    "real_estate_images": "房地产图片",
-    "update_image_to_maximum": "最多更新两张图片",
-    "do_you_agree": "您是否同意 Saveloka 的条款和政策？",
-    "add_room_type": "添加房间类型",
-    "room_type_title": "房间类型标题",
-    "enter_room_type": "输入房间类型标题",
-    "select_bed_type": "选择床型",
-    "select_service": "选择服务",
-    "room_images": "房间图片",
-    "confirm": "确认",
-    "detail": "详情",
-    "facilities": "设施",
-    "location": "位置",
-    "info": "信息",
-    "select_language": "选择语言",
-    "explore": "探索",
-    "booking": "预订",
-    "map": "地图",
-    "post_new": "发布新闻",
-    "profile": "个人资料",
-    "home": "主页",
-    "hotel": "酒店",
-    "land": "土地",
-    "wish_list": "愿望清单",
-    "change_language_success": "语言更改成功！",
-    "username_or_email": "用户名或邮箱",
-    "enter_username_email": "输入您的用户名或邮箱",
-    "for_sale": "待售",
-    "register_partner": "注册合作伙伴",
-    "become_shome_partner": "成为 SHome 合作伙伴",
-    "real_estate_type": "房地产类型",
-    "general_information": "通用信息",
-    "estate_detail": "房产详情",
-    "estate_furniture": "房产家具",
-    "main_currency": "主要货币",
-    "distance_to_city": "距离市中心的距离",
-    "number_of_floors": "楼层数",
-    "estate_facilities": "房产设施",
-    "estate_contact": "房产联系方式",
-    "rooms": "房间",
-    "estate_photo": "房产照片",
-    "payment_information": "付款信息",
-    "bank_name": "银行名称",
-    "account_number": "账号",
-    "account_holder": "账户持有人"
+  "welcome_back": "嗨，欢迎回来！",
+  "email": "邮箱",
+  "password": "密码",
+  "confirm_password": "确认密码",
+  "enter_password": "输入您的密码",
+  "login": "登录",
+  "forgot_password": "忘记密码？",
+  "dont_have_account": "还没有账号？",
+  "signup": "注册",
+  "enter_username": "输入您的用户名",
+  "enter_firstname": "输入您的名字",
+  "enter_lastname": "输入您的姓氏",
+  "enter_phone": "输入您的电话",
+  "enter_email": "输入您的邮箱",
+  "enter_referral": "输入您的推荐码",
+  "enter_new_password": "输入新密码",
+  "enter_password_confirm": "确认密码",
+  "already_have_account": "已有账号？",
+  "submit": "提交",
+  "code": "代码",
+  "this_field_required": "此字段为必填项",
+  "password_not_match": "输入的密码不匹配，请重试。",
+  "use_6_characters": "密码需至少包含6个字符",
+  "invalid_email": "抱歉，只允许使用字母（a-z）、数字（0-9）和句点（.）。",
+  "find_accommodation": "找住宿...",
+  "Find_Accommodation": "找住宿",
+  "we_are_always_here": "我们随时为您提供支持",
+  "rent": "租",
+  "buy": "买",
+  "tour": "游览",
+  "daily": "日租",
+  "monthly": "月租",
+  "yearly": "年租",
+  "around_me": "附近",
+  "studio": "工作室",
+  "all": "全部",
+  "apartment": "公寓",
+  "villa": "别墅",
+  "room": "房间",
+  "others": "其他",
+  "full_furnished": "全配",
+  "unfurnished": "未配",
+  "fixed_price": "固定价格",
+  "negotiable": "可议价",
+  "im_flexible": "我可以接受不同日期",
+  "hotel_residence": "酒店式住宅",
+  "seamless_living": "无缝生活，让酒店成为您的永久家园！",
+  "saveloka_recommended": "Saveloka 推荐单位",
+  "stay_monthly": "以更低的价格住一个月 🤑",
+  "disc_upto": "折扣高达",
+  "see_all": "查看全部",
+  "promotion": "促销",
+  "find_best": "寻找最佳住宿单位 🌴",
+  "thematic_instagram": "主题和 Instagram 适用的单位！✨",
+  "stay_with": "留在一个新的氛围里！",
+  "saveloka_premium": "Saveloka 高级",
+  "selected_premium": "由 Saveloka 提供 5 星级服务的精选高级单位",
+  "find_appartment": "找到符合您预算的公寓！💳",
+  "price_below": "以下价格为月租价格",
+  "lowest": "最低",
+  "highest": "最高",
+  "frequently": "常用价格",
+  "budget": "预算",
+  "popular": "热门",
+  "luxury": "豪华",
+  "weekly_hot_deal": "每周热门优惠 🔥",
+  "ends_in": "结束于",
+  "best_selling": "最畅销的公寓大楼 🏆",
+  "recommend_apartments": "推荐公寓 🏬",
+  "looking_for_a_place": "正在寻找住所？🏠",
+  "find_by_saveloka": "在印度尼西亚大城市中找“由 Saveloka 提供”的单位",
+  "new": "新",
+  "discussion": "讨论",
+  "introduction": "介绍",
+  "room_amenities": "房间设施",
+  "unit_facilities": "单位设施",
+  "map_view": "地图视图",
+  "reviews": "评论",
+  "overview": "概览",
+  "additional_information": "附加信息",
+  "property_live_date": "房产上线日期",
+  "check_in": "入住",
+  "check_out": "退房",
+  "from": "从",
+  "to": "到",
+  "monthly_deposit": "月租押金",
+  "browse_similar": "浏览附近类似的公寓",
+  "per_month_from": "每月价格从：",
+  "contact_host": "联系主人",
+  "book_now": "立即预订",
+  "add_booking": "添加预订",
+  "no_active_booking": "目前没有有效预订",
+  "explore_accommodation": "探索住宿",
+  "check_out_all": "查看所有进行中的促销",
+  "daily_promo": "每日促销",
+  "monthly_promo": "每月促销",
+  "yearly_promo": "每年促销",
+  "rental_promotions": "租赁促销",
+  "filter": "筛选",
+  "filter&sort": "筛选和排序",
+  "accommodation_name": "住宿名称",
+  "type": "类型",
+  "review_score": "评价分数",
+  "sort_result": "按照排序结果",
+  "lowest_price": "最低价格",
+  "highest_price": "最高价格",
+  "best_rating": "最高评分",
+  "number_of_bedrooms": "卧室数量",
+  "benefit_and_annual": "福利和年度账户维护费",
+  "posting_package": "发布套餐",
+  "cost_for_each": "每种新闻类型的费用",
+  "create_an_online": "创建在线交易平台",
+  "post": "发布",
+  "regular_member": "普通会员",
+  "accumulated_points": "累积积分",
+  "point": "积分",
+  "view_plot": "查看剧情",
+  "free_new": "免费新闻",
+  "view_personal": "查看个人信息",
+  "see_the_news": "查看已保存的新闻",
+  "post_management": "发布管理",
+  "financial_management": "财务管理",
+  "customer_management": "客户管理",
+  "managing_trading": "管理交易平台",
+  "client": "客户",
+  "post_price": "发布价格列表",
+  "install_faceid": "安装面容识别",
+  "support": "支持",
+  "hotline": "热线",
+  "website": "网站",
+  "log_out": "登出",
+  "change_password": "更改密码",
+  "personal_information": "个人信息",
+  "customer_buy": "客户需要购买项目",
+  "customer_rent": "客户需要购买 - 需要租赁",
+  "contact_purchased": "已购买联系",
+  "old_password": "旧密码",
+  "new_password": "新密码",
+  "ok": "确定",
+  "balance": "余额",
+  "bonus": "奖金",
+  "donated": "捐赠",
+  "phone": "电话",
+  "gender": "性别",
+  "address": "地址",
+  "main_expiration": "主要到期日期",
+  "normal_expiration": "正常到期日期",
+  "gift_expiration": "礼品到期日期",
+  "link_website": "网站链接",
+  "social_network_link": "社交网络链接",
+  "real_estate": "房地产新闻",
+  "project_news": "项目新闻",
+  "believe_in_knowledge": "相信知识",
+  "news_is_showing": "新闻正在展示",
+  "news_waiting": "等待批准的新闻",
+  "information_not_valid": "信息无效",
+  "unpaid_news": "未支付的新闻",
+  "expired_news": "已过期的新闻",
+  "news_stopped": "停止发布新闻",
+  "list_of_customers": "客户列表",
+  "customers_see_posting": "客户查看帖子",
+  "create_trading": "免费创建交易平台",
+  "invitation_trading": "邀请加入交易平台",
+  "post_price_list_news": "新闻发布价格表",
+  "benefit_annual": "福利和年度账户",
+  "deposit": "存款",
+  "withdraw": "提现",
+  "gift_account": "礼品账户",
+  "reward_membership": "奖励会员积分",
+  "upgrade_account": "升级账户",
+  "day": "天",
+  "quantity": "数量",
+  "status": "状态",
+  "wallet": "钱包",
+  "amount_deposit": "存款金额",
+  "from_money_source": "来源",
+  "add_bank": "添加银行",
+  "add_tag": "添加标签",
+  "your_card_information": "您的卡信息将被保密",
+  "card_detail": "卡片细节",
+  "card_number": "卡号",
+  "expiration_date": "到期日期",
+  "full_name_cardholder": "持卡人姓名",
+  "address_for_credit": "信用卡/借记卡注册地址",
+  "choose_logo": "选择徽标",
+  "name_of_trading": "交易平台名称",
+  "description_content": "描述内容",
+  "introductory_photo": "介绍照片",
+  "headquarter_information": "总部信息",
+  "office_address": "办公地址",
+  "province_city": "省/市",
+  "country": "国家",
+  "ward_commune": "区/公社",
+  "branch_information": "分支信息",
+  "add_branch": "添加分支",
+  "contact_person_information": "联系人信息",
+  "full_name": "全名",
+  "position": "职位",
+  "create": "创建",
+  "enter_a_description": "输入描述",
+  "select_province_city": "选择省/市",
+  "select_district": "选择区",
+  "select_project": "选择项目",
+  "search": "搜索",
+  "customer_buy_project": "客户购买项目",
+  "customer_rent_project": "客户租赁项目",
+  "sell": "出售",
+  "lease": "租赁",
+  "real_estate_title": "房地产标题",
+  "enter_real_estate_title": "输入房地产标题",
+  "select_the_furniture": "选择家具",
+  "price": "价格",
+  "enter_price": "输入价格",
+  "acreage": "面积",
+  "enter_the_land_area": "输入土地面积",
+  "contact_info": "联系信息",
+  "real_estate_images": "房地产图片",
+  "update_image_to_maximum": "最多更新两张图片",
+  "do_you_agree": "您是否同意 Saveloka 的条款和政策？",
+  "add_room_type": "添加房间类型",
+  "room_type_title": "房间类型标题",
+  "enter_room_type": "输入房间类型标题",
+  "select_bed_type": "选择床型",
+  "select_service": "选择服务",
+  "room_images": "房间图片",
+  "confirm": "确认",
+  "detail": "详情",
+  "facilities": "设施",
+  "location": "位置",
+  "info": "信息",
+  "select_language": "选择语言",
+  "explore": "探索",
+  "booking": "预订",
+  "map": "地图",
+  "post_new": "发布新闻",
+  "profile": "个人资料",
+  "home": "主页",
+  "hotel": "酒店",
+  "land": "土地",
+  "wish_list": "愿望清单",
+  "change_language_success": "语言更改成功！",
+  "username_or_email": "用户名或邮箱",
+  "enter_username_email": "输入您的用户名或邮箱",
+  "for_sale": "待售",
+  "register_partner": "注册合作伙伴",
+  "become_shome_partner": "成为 SHome 合作伙伴",
+  "real_estate_type": "房地产类型",
+  "general_information": "通用信息",
+  "estate_detail": "房产详情",
+  "estate_furniture": "房产家具",
+  "main_currency": "主要货币",
+  "distance_to_city": "距离市中心的距离",
+  "number_of_floors": "楼层数",
+  "estate_facilities": "房产设施",
+  "estate_contact": "房产联系方式",
+  "rooms": "房间",
+  "estate_photo": "房产照片",
+  "payment_information": "付款信息",
+  "bank_name": "银行名称",
+  "account_number": "账号",
+  "account_holder": "账户持有人",
+  "tour_information": "旅游信息",
+  "title": "标题",
+  "provincial": "省级链接",
+  "tour_code": "旅游编码",
+  "topic": "主题",
+  "domestic": "国内旅游",
+  "tour_time": "旅游时间",
+  "day_time": "白天时间",
+  "night_time": "夜晚时间",
+  "night": "晚上",
+  "maximum_seat": "最大座位数",
+  "starting_gate": "起始门",
+  "destination": "目的地",
+  "picture_video": "图片和视频",
+  "link_youtube": "YouTube链接",
+  "link_tiktok": "TikTok链接",
+  "name": "名称"
 }
