--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -242,26 +242,43 @@
   "RENT": "SEWA",
   "BUY": "BELI",
   "TOUR": "WISATA",
-  "wish_list":"Daftar Keinginan",
-  "change_language_success":"Berhasil mengubah bahasa!",
-  "username_or_email":"Nama pengguna atau email",
-  "enter_username_email":"Masukkan nama pengguna atau email Anda",
-  "for_sale":"Untuk dijual",
-  "register_partner":"Daftar mitra",
-  "become_shome_partner":"Menjadi mitra SHome",
-  "real_estate_type":"Tipe properti",
+  "wish_list": "Daftar Keinginan",
+  "change_language_success": "Berhasil mengubah bahasa!",
+  "username_or_email": "Nama pengguna atau email",
+  "enter_username_email": "Masukkan nama pengguna atau email Anda",
+  "for_sale": "Untuk dijual",
+  "register_partner": "Daftar mitra",
+  "become_shome_partner": "Menjadi mitra SHome",
+  "real_estate_type": "Tipe properti",
   "general_information": "Informasi Umum",
-    "estate_detail": "Detail Properti",
-    "estate_furniture": "Perabot Properti",
-    "main_currency": "Mata Uang Utama",
-    "distance_to_city": "Jarak ke Pusat Kota",
-    "number_of_floors": "Jumlah Lantai",
-    "estate_facilities": "Fasilitas Properti",
-    "estate_contact": "Informasi Kontak Properti",
-    "rooms": "Kamar",
-    "estate_photo": "Foto Properti",
-    "payment_information": "Informasi Pembayaran",
-    "bank_name": "Nama Bank",
-    "account_number": "Nomor Rekening",
-    "account_holder": "Pemegang Rekening"
+  "estate_detail": "Detail Properti",
+  "estate_furniture": "Perabot Properti",
+  "main_currency": "Mata Uang Utama",
+  "distance_to_city": "Jarak ke Pusat Kota",
+  "number_of_floors": "Jumlah Lantai",
+  "estate_facilities": "Fasilitas Properti",
+  "estate_contact": "Informasi Kontak Properti",
+  "rooms": "Kamar",
+  "estate_photo": "Foto Properti",
+  "payment_information": "Informasi Pembayaran",
+  "bank_name": "Nama Bank",
+  "account_number": "Nomor Rekening",
+  "account_holder": "Pemegang Rekening",
+  "tour_information": "Informasi Tur",
+  "title": "Judul",
+  "provincial": "Tautan Provinsi",
+  "tour_code": "Kode Tur",
+  "topic": "Topik",
+  "domestic": "Pariwisata Dalam Negeri",
+  "tour_time": "Waktu Tur",
+  "day_time": "Waktu Siang",
+  "night_time": "Waktu Malam",
+  "night": "Malam",
+  "maximum_seat": "Jumlah Kursi Maksimum",
+  "starting_gate": "Gerbang Mulai",
+  "destination": "Tujuan",
+  "picture_video": "Foto dan Video",
+  "link_youtube": "Tautan YouTube",
+  "link_tiktok": "Tautan TikTok",
+  "name": "Nama"
 }
