--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -242,14 +242,14 @@
   "RENT": "SEWA",
   "BUY": "BELI",
   "TOUR": "PENGEMBARAAN",
-  "wish_list":"Senarai Keinginan",
-  "change_language_success":"Berjaya tukar bahasa!",
-  "username_or_email":"Nama pengguna atau emel",
-  "enter_username_email":"Masukkan nama pengguna atau emel anda",
-  "for_sale":"Untuk dijual",
-  "register_partner":"Daftar rakan kongsi",
-  "become_shome_partner":"Menjadi rakan kongsi SHome",
-  "real_estate_type":"Jenis hartanah",
+  "wish_list": "Senarai Keinginan",
+  "change_language_success": "Berjaya tukar bahasa!",
+  "username_or_email": "Nama pengguna atau emel",
+  "enter_username_email": "Masukkan nama pengguna atau emel anda",
+  "for_sale": "Untuk dijual",
+  "register_partner": "Daftar rakan kongsi",
+  "become_shome_partner": "Menjadi rakan kongsi SHome",
+  "real_estate_type": "Jenis hartanah",
   "general_information": "Maklumat Am",
   "estate_detail": "Butiran Harta Tanah",
   "estate_furniture": "Perabot Harta Tanah",
@@ -263,5 +263,22 @@
   "payment_information": "Maklumat Pembayaran",
   "bank_name": "Nama Bank",
   "account_number": "Nombor Akaun",
-  "account_holder": "Pemegang Akaun"
+  "account_holder": "Pemegang Akaun",
+  "tour_information": "Maklumat lawatan",
+  "title": "Tajuk",
+  "provincial": "Pautan negeri",
+  "tour_code": "Kod lawatan",
+  "topic": "Tajuk",
+  "domestic": "Pelancongan dalam negeri",
+  "tour_time": "Masa lawatan",
+  "day_time": "Masa siang",
+  "night_time": "Masa malam",
+  "night": "Malam",
+  "maximum_seat": "Bilangan tempat duduk maksimum",
+  "starting_gate": "Pintu keberangkatan",
+  "destination": "Destinasi",
+  "picture_video": "Gambar dan video",
+  "link_youtube": "Pautan YouTube",
+  "link_tiktok": "Pautan TikTok",
+  "name": "Nama"
 }
