--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -237,14 +237,14 @@
   "RENT": "UPOHAN",
   "BUY": "BILHIN",
   "TOUR": "BIYAHENG TURISMO",
-  "wish_list":"Listahan ng Nais",
-  "change_language_success":"Tagumpay na pagbabago ng wika!",
-  "username_or_email":"Username o email",
-  "enter_username_email":"Ipasok ang iyong username o email",
-  "for_sale":"Para sa benta",
-  "register_partner":"Magparehistro ng kasosyo",
-  "become_shome_partner":"Maging kasosyo sa SHome",
-  "real_estate_type":"Uri ng real estate",
+  "wish_list": "Listahan ng Nais",
+  "change_language_success": "Tagumpay na pagbabago ng wika!",
+  "username_or_email": "Username o email",
+  "enter_username_email": "Ipasok ang iyong username o email",
+  "for_sale": "Para sa benta",
+  "register_partner": "Magparehistro ng kasosyo",
+  "become_shome_partner": "Maging kasosyo sa SHome",
+  "real_estate_type": "Uri ng real estate",
   "general_information": "Pangkalahatang Impormasyon",
   "estate_detail": "Detalye ng Estate",
   "estate_furniture": "Mga Kasangkapan sa Estate",
@@ -258,5 +258,22 @@
   "payment_information": "Impormasyon sa Pagbabayad",
   "bank_name": "Pangalan ng Bangko",
   "account_number": "Numero ng Account",
-  "account_holder": "Tagataguyod ng Account"
+  "account_holder": "Tagataguyod ng Account",
+  "tour_information": "Impormasyon sa Tour",
+  "title": "Pamagat",
+  "provincial": "Mga Koneksyon sa Lalawigan",
+  "tour_code": "Kodigo ng Tour",
+  "topic": "Paksa",
+  "domestic": "Domestikong Turismo",
+  "tour_time": "Oras ng Tour",
+  "day_time": "Oras ng Araw",
+  "night_time": "Oras ng Gabi",
+  "night": "Gabi",
+  "maximum_seat": "Maximum na Bilang ng Upuan",
+  "starting_gate": "Simula ng Pintuan",
+  "destination": "Destinasyon",
+  "picture_video": "Larawan at Bideo",
+  "link_youtube": "Koneksyon sa YouTube",
+  "link_tiktok": "Koneksyon sa TikTok",
+  "name": "Pangalan"
 }
