--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -242,14 +242,14 @@
   "RENT": "เช่า",
   "BUY": "ซื้อ",
   "TOUR": "ทัวร์",
-  "wish_list":"รายการสิ่งที่ต้องการ",
-  "change_language_success":"เปลี่ยนภาษาสำเร็จ!",
-  "username_or_email":"ชื่อผู้ใช้หรืออีเมล",
-  "enter_username_email":"ป้อนชื่อผู้ใช้หรืออีเมลของคุณ",
-  "for_sale":"สำหรับขาย",
-  "register_partner":"ลงทะเบียนพาร์ทเนอร์",
-  "become_shome_partner":"เป็นพาร์ทเนอร์ SHome",
-  "real_estate_type":"ประเภทอสังหาริมทรัพย์",
+  "wish_list": "รายการสิ่งที่ต้องการ",
+  "change_language_success": "เปลี่ยนภาษาสำเร็จ!",
+  "username_or_email": "ชื่อผู้ใช้หรืออีเมล",
+  "enter_username_email": "ป้อนชื่อผู้ใช้หรืออีเมลของคุณ",
+  "for_sale": "สำหรับขาย",
+  "register_partner": "ลงทะเบียนพาร์ทเนอร์",
+  "become_shome_partner": "เป็นพาร์ทเนอร์ SHome",
+  "real_estate_type": "ประเภทอสังหาริมทรัพย์",
   "general_information": "ข้อมูลทั่วไป",
   "estate_detail": "รายละเอียดทรัพย์สิน",
   "estate_furniture": "เฟอร์นิเจอร์ของทรัพย์สิน",
@@ -263,5 +263,22 @@
   "payment_information": "ข้อมูลการชำระเงิน",
   "bank_name": "ชื่อธนาคาร",
   "account_number": "หมายเลขบัญชี",
-  "account_holder": "ผู้ถือบัญชี"
+  "account_holder": "ผู้ถือบัญชี",
+  "tour_information": "ข้อมูลทัวร์",
+  "title": "ชื่อเรื่อง",
+  "provincial": "ลิงก์จังหวัด",
+  "tour_code": "รหัสทัวร์",
+  "topic": "หัวข้อ",
+  "domestic": "การท่องเที่ยวในประเทศ",
+  "tour_time": "เวลาทัวร์",
+  "day_time": "ช่วงเวลากลางวัน",
+  "night_time": "ช่วงเวลากลางคืน",
+  "night": "กลางคืน",
+  "maximum_seat": "จำนวนที่นั่งสูงสุด",
+  "starting_gate": "ประตูเริ่มต้น",
+  "destination": "ปลายทาง",
+  "picture_video": "รูปภาพและวิดีโอ",
+  "link_youtube": "ลิงก์ยูทูป",
+  "link_tiktok": "ลิงก์ทิกท็อก",
+  "name": "ชื่อ"
 }
