--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -242,14 +242,14 @@
   "RENT": "THUÊ",
   "BUY": "MUA",
   "TOUR": "DU LỊCH",
-  "wish_list":"Danh sách mong muốn",
-  "change_language_success":"Đổi ngôn ngữ thành công!",
-  "username_or_email":"Tên người dùng hoặc email",
-  "enter_username_email":"Nhập tên người dùng hoặc email của bạn",
-  "for_sale":"Đang bán",
-  "register_partner":"Đăng ký đối tác",
-  "become_shome_partner":"Trở thành đối tác SHome",
-  "real_estate_type":"Loại bất động sản",
+  "wish_list": "Danh sách mong muốn",
+  "change_language_success": "Đổi ngôn ngữ thành công!",
+  "username_or_email": "Tên người dùng hoặc email",
+  "enter_username_email": "Nhập tên người dùng hoặc email của bạn",
+  "for_sale": "Đang bán",
+  "register_partner": "Đăng ký đối tác",
+  "become_shome_partner": "Trở thành đối tác SHome",
+  "real_estate_type": "Loại bất động sản",
   "general_information": "Thông Tin Tổng Quan",
   "estate_detail": "Chi Tiết Bất Động Sản",
   "estate_furniture": "Nội Thất Bất Động Sản",
@@ -263,5 +263,22 @@
   "payment_information": "Thông Tin Thanh Toán",
   "bank_name": "Tên Ngân Hàng",
   "account_number": "Số Tài Khoản",
-  "account_holder": "Chủ Tài Khoản"
+  "account_holder": "Chủ Tài Khoản",
+  "tour_information": "Thông tin tour",
+  "title": "Tiêu đề",
+  "provincial": "Liên kết tỉnh thành",
+  "tour_code": "Mã tour",
+  "topic": "Chủ đề",
+  "domestic": "Du lịch nội địa",
+  "tour_time": "Thời gian tour",
+  "day_time": "Thời gian ban ngày",
+  "night_time": "Thời gian ban đêm",
+  "night": "Buổi tối",
+  "maximum_seat": "Số ghế tối đa",
+  "starting_gate": "Cổng khởi hành",
+  "destination": "Điểm đến",
+  "picture_video": "Ảnh và video",
+  "link_youtube": "Liên kết Youtube",
+  "link_tiktok": "Liên kết TikTok",
+  "name": "Tên"
 }
