--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -242,6 +242,7 @@
   "RENT": "SEWA",
   "BUY": "BELI",
   "TOUR": "WISATA",
+  "tour_post": "Wisata",
   "wish_list": "Daftar Keinginan",
   "change_language_success": "Berhasil mengubah bahasa!",
   "username_or_email": "Nama pengguna atau email",
