--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -242,6 +242,7 @@
   "RENT": "SEWA",
   "BUY": "BELI",
   "TOUR": "PENGEMBARAAN",
+  "tour_post": "Lawatan",
   "wish_list": "Senarai Keinginan",
   "change_language_success": "Berjaya tukar bahasa!",
   "username_or_email": "Nama pengguna atau emel",
