--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -237,6 +237,7 @@
   "RENT": "UPOHAN",
   "BUY": "BILHIN",
   "TOUR": "BIYAHENG TURISMO",
+  "tour_post": "Paglalakbay",
   "wish_list": "Listahan ng Nais",
   "change_language_success": "Tagumpay na pagbabago ng wika!",
   "username_or_email": "Username o email",
