--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -26,6 +26,7 @@
   "rent": "THUÊ",
   "buy": "MUA",
   "tour": "DU LỊCH",
+  "tour_post": "Du lịch",
   "daily": "Hàng ngày",
   "monthly": "Hàng tháng",
   "yearly": "Hàng năm",
